[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'stcp_api'
version = '2.0.1'
description = 'Unofficial API to retrieve STCP information for public transit buses in Porto, Portugal'
readme = 'README.md'
authors = [{ name = 'Guilherme Borges', email = 'github@guilhermeborges.net' }]
license = { file = 'LICENSE' }
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]
keywords = ['public_transit', 'transit_api', 'bus']
dependencies = [
    'requests',
    'requests-cache',
    'beautifulsoup4',
    'urllib3'
]
requires-python = '>=3.11'

[project.urls]
Homepage = 'https://github.com/sgtpepperpt/stcp-api'
